--- a/index.html
+++ b/index.html
@@ -100,19 +100,16 @@ maeanniebantonio@gmail.com<br> <br>
 <p align="center"> <font size="15" style="Century Gothic"> 
 <h3 align="center"> Skills</h3> 	
 <p> <font class="text" size="5">
-&nbsp;&nbsp;Fluent in speaking the language (English and Filipino) <br>
-&nbsp;&nbsp;	Learning the Korean language<br>
-&nbsp;&nbsp;	Fond of any computer-based activities<br>
-&nbsp;&nbsp;Knowledgeable in MS Office Application<br>
-&nbsp;&nbsp;Knows the basics of Code Editing & Web Development and Design<br>
+&nbsp;&nbsp;Fluent in speaking the language (Filipino) <br>
+&nbsp;&nbsp;Learning the Korean language<br>
+&nbsp;&nbsp;Knowledgeable in English Language<br>
+&nbsp;&nbsp;Knowledgeable in MS Office Applications<br>
 &nbsp;&nbsp;Knowledgeable in Media Editing Applications<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-Canva<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-Adobe Photoshop CS6<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-iMovie<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-Sony Vegas Pro<br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-Audacity<br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-Venngage<br>
-	&nbsp;&nbsp;Outgoing, explorer, trustworthy and reliable<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Can cook and sell things<br>
+	&nbsp;&nbsp;Outgoing, explorer, trustworthy, organized, diligent, independent, sociable and reliable<br>
 <h3 align="center </h3>
 </div>
 </body>
